website redesign, continued

--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=windows-1252" />
-        <meta http-equiv="Refresh" content="1; en/index.html" />
+        <meta http-equiv="Refresh" content="0; en/index.html" />
         <title>Sooda</title>
         <script language="javascript">
             function lang_redirect()
@@ -19,9 +19,9 @@
                     lang = window.navigator.language;
                 }
                 if (lang.indexOf("pl") == 0)
-                    location.replace("pl/");
+                    location.replace("pl/index.html");
                 else
-                    location.replace("en/");
+                    location.replace("en/index.html");
             }
         </script>
     </head>
